--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -51,10 +51,12 @@
             <span class='glyphicon glyphicon-plus'></span> NEW TRACK
         </button>
     </div>
-    <div class='track'>
-        <piano-roll (noteDrawn)="registerNoteDrawn($event)" [key]="configDataService.key" [scale]="configDataService.scale.name"></piano-roll>
-        <template #newPianoRoll></template>
-    </div>
+    <piano-roll
+        (noteDrawn)="registerNoteDrawn($event)"
+        (trackChange)="registerTrackChange($event)"
+        [key]="configDataService.key"
+        [scale]="configDataService.scale.name"></piano-roll>
+    <template #newPianoRoll></template>
 </div>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
