--- a/ClientApp/src/app/piano-roll.component.html
+++ b/ClientApp/src/app/piano-roll.component.html
@@ -1,4 +1,44 @@
+<div class="modal fade" [id]="'generationModal' + trackNumber" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Configure generation</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                     <form #generationForm="ngForm">
+                        What would you like to generate?
+                        <label class="custom-radio-button">
+                            <input [(ngModel)]="generationType" type="radio" value="melody" name="generationType">A melody
+                            <span class="radio"></span>
+                        </label>
 
+                        <label class="custom-radio-button">A chord progression
+                            <input [(ngModel)]="generationType" type="radio" value="chords" name="generationType">
+                            <span class="radio"></span>
+                        </label>
+                        <hr/>
+                        <label class='custom-checkbox'>Only generate notes within {{ configDataService.key }} {{ configDataService.scale.name }}
+                            <input [(ngModel)]="conformToKeyScale" type="checkbox" name="conformToKeyScale">
+                            <span class="checkmark"></span>
+                        </label>
+                        <label class='custom-checkbox' style='display:inline-block;margin-right:15px;'>
+                            Only generate notes in octave
+                            <input [(ngModel)]="octaveConstraintCheck" type="checkbox" name="octaveConstraintCheck">
+                            <span class="checkmark"></span>
+                        </label>
+                        <input class='form-control' style='width:70px' [(ngModel)]="octaveConstraint" type="number" name="octaveConstraint">
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-light" data-dismiss="modal">Close</button>
+                    <button type="button" (click)="generate(generationForm.value)" class="btn btn-success" data-dismiss="modal">Generate</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
 <nav class="navbar fixed-bottom navbar-light bg-light piano-roll-wrapper" [id]="'pianoRoll' + trackNumber">
     <div class='row'>
@@ -16,19 +56,6 @@
             </div>
         </div>
         <div class='col'>
-            <div class='row piano-metadata'>
-                <div class="col-1">
-                    <!--
-<button class="action-button" type="button" data-toggle="collapse" data-target="#chord-data-collapse">
-                        <span class='glyphicon glyphicon-eye-open'></span> CHORDS
-                    </button>
--->
-                </div>
-                <div class='col chord-data' >
-                    <span *ngFor="let chord of configDataService.dawState.chord_names[trackNumber]"
-                            class="chord-name" [style.width]="configDataService.stateWidth">{{ chord }} </span>
-                </div>
-            </div>
             <div class="row piano-roll">
                 <div class="col-1 piano">
                     <div class='piano-keys'>
