--- a/ClientApp/src/app/track.component.css
+++ b/ClientApp/src/app/track.component.css
@@ -16,7 +16,6 @@
     height:35px;
     font-size:16px;
     padding:6px 5px 10px 13px;
-
 }
 
 .delete-track-button {
@@ -158,3 +157,26 @@ Adjacent active notes are to be interpreted as sustained.grid-state-wrapper[data
     top:-3px;
     position:relative;
 }
+
+
+.piano-metadata {
+    margin:0px 0 10px 0;
+    padding:0 15px 0 5px;
+}
+
+.chord-data {
+    height: 35px;
+    border-radius: 2px;
+    border: solid 1px #c6f7ff;
+    font-size:12px;
+    color:#42dcf4;
+}
+
+.chord-name {
+    display:inline-block;
+    height:35px;
+    overflow:hidden;
+}
+
+
+
