--- a/ClientApp/src/app/piano-roll.component.html
+++ b/ClientApp/src/app/piano-roll.component.html
@@ -40,7 +40,7 @@
         </div>
     </div>
 
-<nav class="navbar fixed-bottom navbar-light bg-light piano-roll-wrapper" [id]="'pianoRoll' + trackNumber">
+<nav class="navbar fixed-bottom navbar-light bg-light piano-roll-wrapper">
     <div class='row'>
         <div class="col-2">
             <div class="col">
