--- a/ClientApp/src/app/piano-roll.component.html
+++ b/ClientApp/src/app/piano-roll.component.html
@@ -43,17 +43,17 @@
 <nav class="navbar fixed-bottom navbar-light bg-light piano-roll-wrapper">
     <div class='row'>
         <div class="col-2">
-            <div class="col">
-                <button class="action-button" type="button" id="generate-button" data-toggle="modal" [attr.data-target]="'#generationModal' + trackNumber ">
-                    <span class='glyphicon glyphicon-fire'></span>
-                    GENERATE
-                </button>
+            <button class="action-button" type="button" id="generate-button" data-toggle="modal" [attr.data-target]="'#generationModal' + trackNumber ">
+                <span class='glyphicon glyphicon-fire'></span>
+                GENERATE
+            </button>
 
-                <button class="action-button" id="clear-button" (click)="clearPianoRoll()">
-                    <span class='glyphicon glyphicon-ban-circle'></span>
-                    CLEAR
-                </button>
-            </div>
+            <button class="action-button" id="clear-button" (click)="clearPianoRoll()">
+                <span class='glyphicon glyphicon-ban-circle'></span>
+                CLEAR
+            </button>
+
+            <span class='piano-roll-track-msg'>Now editing track <label class='label label-info'>{{ trackNumber + 1}}</label></span>
         </div>
         <div class='col'>
             <div class="row piano-roll">
