--- a/ClientApp/src/app/track.component.html
+++ b/ClientApp/src/app/track.component.html
@@ -1,4 +1,4 @@
-<div class='track'>
+<div class='track' [class.track-selected]="thisTrackIsSelected">
     <div class='row'>
         <div class='col-1'>
             <span class='track-number'>{{ trackNumber + 1 }}</span>
