--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -48,7 +48,7 @@
     </header>
     <div class='row control-bar'>
         <button id='add-track-button' class='control-bar-button' (click)="addTrack()">
-            <span class='glyphicon glyphicon-plus'></span> NEW TRACK
+            <span class='glyphicon glyphicon-plus'></span> ADD TRACK
         </button>
     </div>
     <div class='header-space'></div>
