--- a/ClientApp/src/app/track.component.css
+++ b/ClientApp/src/app/track.component.css
@@ -1,19 +1,26 @@
 .track {
-    background:#eafbff;
-    border:solid 1px #1d626d;
-    border-radius:3px;
-    padding:5px;
-    margin:10px 0;
+    padding:0;
+    margin:0;
+}
+
+.track-controls, .track-right-pane {
+    background: linear-gradient(#008fa8, #019bb7);
+    color:white;
+    border-bottom:solid 1px black;
 }
 
 .track-number {
     display:inline-block;
+/*
     background:#42dcf4;
+    border-radius:50%;
+ */
     color:white;
     font-weight:bold;
-    border-radius:50%;
-    width:35px;
+   /*
+ width:35px;
     height:35px;
+ */
     font-size:16px;
     padding:6px 5px 10px 13px;
 }
@@ -21,8 +28,7 @@
 .delete-track-button {
     background:none;
     border:0;
-    color:#1d626d;
-    opacity:0.6;
+    color:white;
     padding:5px 10px;
     font-size:12px;
     margin:10px 10px 0 5px;
@@ -31,18 +37,17 @@
     -moz-transition:opacity .2s;
 }
 
-.delete-track-button:hover {
-    opacity:1;
-}
-
 .region-preview {
     width: 250px;
-    border:solid 1px #1d626d;
-    border-radius:3px;
-    margin: 10px 0px 0px 0;
+    border-left:solid 1px #1d626d;
+    border-right:solid 1px #1d626d;
+    border-radius:0;
+    margin: 0;
     padding:3px;
     display:inline-block;
     cursor:pointer;
+    background:#a8efff;
+    border-bottom:solid 1px black;
 }
 
 .region-preview input, .region-preview label {
@@ -64,15 +69,11 @@
 }
 
 .track {
-    opacity:0.6;
+    opacity:0.8;
 }
 
 .track.track-selected {
     opacity:1;
-}
-
-.track.track-selected .region-preview {
-    background:#c9f5ff;
 }
 
 .note-rows {
@@ -162,7 +163,6 @@ Adjacent active notes are to be interpreted as sustained.grid-state-wrapper[data
 .chord-data {
     height: 35px;
     border-radius: 2px;
-    border: solid 1px #c6f7ff;
     font-size:12px;
     color:#42dcf4;
 }
