--- a/ClientApp/src/app/piano-roll.component.css
+++ b/ClientApp/src/app/piano-roll.component.css
@@ -3,7 +3,8 @@
     bottom:0;
     margin:0;
     border:0;
-    border-top:solid 2px #1d626d;
+    border-top:solid 4px #1d626d;
+    outline:solid 2px black;
     border-radius:0;
     padding:0;
     resize:vertical;
@@ -22,6 +23,11 @@
 button:focus, button:active, input:focus, input:active {
     box-shadow:none;
     outline:none;
+}
+
+button[disabled] {
+    opacity:0.7;
+    cursor:no-select;
 }
 
 /* width */
@@ -334,6 +340,7 @@ Adjacent active notes are to be interpreted as sustained.grid-state-wrapper[data
     display:inline-block;
     padding:10px 5px;
     color:white;
+    user-select:none;
 }
 
 .action-button {
@@ -351,6 +358,5 @@ Adjacent active notes are to be interpreted as sustained.grid-state-wrapper[data
 }
 
 .action-button:hover {
-    border-color: grey;
-    color: grey;
+    border-color: white;
 }
