--- a/ClientApp/src/app/track.component.css
+++ b/ClientApp/src/app/track.component.css
@@ -163,8 +163,8 @@ Adjacent active notes are to be interpreted as sustained.grid-state-wrapper[data
 .chord-data {
     height: 35px;
     border-radius: 2px;
-    font-size:12px;
-    color:#42dcf4;
+    font-size:10px;
+    color:#1d626d;
 }
 
 .chord-name {
