Updated app screenshots

--- a/ClientApp/src/app/app.component.css
+++ b/ClientApp/src/app/app.component.css
@@ -1,5 +1,6 @@
 #application-wrapper {
-    background:#c9f5ff;
+    /* background:linear-gradient(#005f70, #008fa8); */
+    background:#a5f2ff;
 }
 
 .primary-color {
