--- a/ClientApp/src/app/piano-roll.component.css
+++ b/ClientApp/src/app/piano-roll.component.css
@@ -59,7 +59,7 @@ button[disabled] {
 
 
 .piano-roll {
-    padding:0 5px;
+    padding:0;
     margin: 0;
     border-left:0;
     border-right:0;
@@ -98,7 +98,7 @@ ul {
 }
 
 .piano-key-set .white {
-    background: white;
+    background: linear-gradient(white, #f9fafc);;
     border-bottom: solid 1px #00869e;
     width:100%;
     z-index:0;
