--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -12,7 +12,7 @@
             </span>
         </div>
         <div class="col text-left">
-            <form [formGroup]='controlPanelForm' (change)='updateConfigState()' style='display:inline-block'>
+            <form [formGroup]='controlPanelForm' id='control-panel-form' (change)='updateConfigState()' style='display:inline-block'>
                 <div class='control-panel'>
                     <button id='play-button' class='top-bar-button' (click)="togglePlayState()">
                         <span class='glyphicon' [class.glyphicon-play]="!configDataService.inPlayState" [class.glyphicon-pause]="configDataService.inPlayState"></span>
