--- a/ClientApp/src/app/track.component.css
+++ b/ClientApp/src/app/track.component.css
@@ -22,11 +22,16 @@
     border:0;
     color:white;
     padding:5px 10px;
-    font-size:12px;
-    margin:10px 10px 0 5px;
-    transition:color .2s;
+    font-size:15px;
+    margin:10px 10px 0 15px;
+    opacity:0.7;
+    transition:opacity .2s;
     -webkit-transition:opacity .2s;
     -moz-transition:opacity .2s;
+}
+
+.delete-track-button:hover {
+    opacity: 1;
 }
 
 .region-preview {
