--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -2,6 +2,15 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <link data-require="bootstrap-css@3.3.6" data-semver="3.3.6" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css" />
 <div class="container-fluid" id="application-wrapper">
+    <div class="row primary-color" id="top-toolbar">
+        <button mat-button id="File" [matMenuTriggerFor]="filemenu">File</button>
+    </div>
+    <mat-menu #filemenu="matMenu" id='file-menu' class='toolbar-menu'>
+        <button mat-menu-item (click)="exportToMidi()">
+          <mat-icon>music_note</mat-icon>
+          <span>Export to MIDI</span>
+        </button>
+    </mat-menu>
     <header class="row primary-color">
         <div class="col-4 text-left">
             <span class='title-box no-select'>
