--- a/ClientApp/src/app/piano-roll.component.css
+++ b/ClientApp/src/app/piano-roll.component.css
@@ -289,7 +289,7 @@ Adjacent active notes are to be interpreted as sustained.grid-state-wrapper[data
 
 /* Create a custom checkbox */
 .checkmark {
-    margin:0;
+    margin:0 5px 5px 5px;
     position: absolute;
     top: 2px;
     left: 0;
