--- a/ClientApp/src/app/piano-roll.component.html
+++ b/ClientApp/src/app/piano-roll.component.html
@@ -30,13 +30,16 @@
                                 
                                 <label class='form-label' style='display:inline-block;margin-right:15px;'>
                                     Only generate notes in octave
-                                    
                                 </label>
                                 
-                                <label class='form-label' style='display:inline-block;margin-right:15px;'>
-                                    Chords may contain between
-                                    
+                                <label class='form-label' style='display:inline-block;margin-right:15px;' *ngIf="generationType == 'chords'">
+                                    Chords may contain between    
                                 </label>
+
+                                <label class='form-label' style='display:inline-block;margin-right:15px;'>
+                                    Disallow consecutive <span *ngIf="generationType == 'melody'">note</span> <span *ngIf="generationType == 'chords'">chord</span> repeats
+                                </label>
+
                             </div>
                             <div class='col-6'>
                                 <select name="key" style="text-align-last:center;width:70px;display:inline-block"  class='form-control' [ngModel]="configDataService.key" >
@@ -52,13 +55,17 @@
 
                                 <input class='form-control' style='width:70px; display:inline-block' [(ngModel)]="octaveConstraint" type="number" name="octaveConstraint">    
 
-                                <label class='form-label' style='display:inline-block;margin-right:15px;'>
+                                <label class='form-label' style='display:inline-block;margin-right:15px;' *ngIf="generationType == 'chords'">
                                     <input class='form-control' [(ngModel)]="chordSizeLowerBound" type="number" name="chordSizeLowerBound" style='width:70px; display:inline-block' >
                                     and 
                                     <input class='form-control' [(ngModel)]="chordSizeUpperBound" type="number" name="chordSizeUpperBound" style='width:70px; display:inline-block' >
                                     notes
                                 </label>
-
+                                <br/>
+                                <label class='custom-checkbox' style='display:inline-block;margin-right:15px;'>
+                                    <input class='form-control' style='width:70px; display:inline-block' [(ngModel)]="disallowRepeats" type="checkbox" name="disallowRepeats">
+                                    <span class="checkmark"></span>
+                                </label>
                             </div>
                         </div>
                     </form>
